# jargon

./: .gitignore  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yaml
example/autoencoder/: autoencoder.py  sweep.py
example/autoencoder/conf/: 1.yaml  2.yaml
jargon/: __init__.py
jargon/callback/: __init__.py  callback.py  metrics.py
jargon/core/: __init__.py  batch.py  trainer.py
jargon/envs/: __init__.py  autoencoder.py  environment.py
jargon/game/: __init__.py  multi_signaling.py  signaling.py  signaling_network.py  supervised.py
jargon/logger/: __init__.py  duplicate_checker.py  logger.py  wandb_logger.py
jargon/loss/: __init__.py  loss.py  loss_selector.py  text_cross_entropy.py
jargon/net/: __init__.py  attention.py  discrete_non_rep_sender.py  discrete_receiver.py  discrete_sender.py  mlp.py  net.py  non_rep_sender.py  onehotify.py  receiver.py  recurrent.py  recurrent_decoder.py  recurrent_encoder.py  rnn.py  sender.py
jargon/net/functional/: __init__.py  discounted_cumulative_reward.py  drop_padding.py  padding_mask.py  sampler.py
jargon/net/loss/: __init__.py  pg_loss.py
jargon/stopper/: __init__.py  dummy.py  min_max.py  stopper.py
jargon/utils/: __init__.py  analysis.py  date_to_str.py  discounted_return.py  fix_seed.py  functional.py  generalized_advantage_estimation.py  init_weights.py  logger.py  random_split.py  read_config.py  torchdict.py
jargon/zoo/: __init__.py  utils.py
jargon/zoo/identity/: __init__.py  loss.py  metrics.py  (+2 more)
tests/verify/: test_identity.py  test_signaling.py  test_supervised.py
(+67 files in other folders)
